class Ingresso:
    
    def __init__ (self, idIngresso, horaSessao, filme, cinema, poltrona, valorIngresso, cliente):
        self._idIngresso = idIngresso
        self._horaSessao = horaSessao
        self._filme = filme
        self._cinema = cinema
        self._poltrona = poltrona
        self._valorIngresso = valorIngresso
        self._cliente = cliente